fix(browser): 修复 Playwright Chromium 可执行路径识别，避免重复下载循环
- 更新 BrowserTool.resolveChromiumExecutable 为多候选路径探测
- macOS 支持 Chrome for Testing 新目录结构（arm64/x64）
- 保留旧版 Chromium.app 路径兼容
- Windows/Linux 同步补充候选路径，提升跨平台稳定性
- 修复“下载完成后 executable not found -> 清理 -> 再下载”的死循环